--- a/Manjaro_Installations.tex
+++ b/Manjaro_Installations.tex
@@ -659,6 +659,27 @@ Followed the download and installation instructions in \href{https://calibre-ebo
 	\end{verbatim}
 \end{footnotesize}
 
+\section{Rust}
 
-	
+
+Run:
+
+\begin{footnotesize}
+	\begin{verbatim}
+		curl --proto '=https' --tlsv1.3 https://sh.rustup.rs -sSf | sh
+	\end{verbatim}
+\end{footnotesize}
+
+As explained in \href{https://doc.rust-lang.org/book/ch01-01-installation.html}{Rust-Language Book}.
+
+\begin{footnotesize}
+	\begin{verbatim}
+		[pablo@pablo-p170em ~]$ rustup -V
+		rustup 1.25.2 (17db695f1 2023-02-01)
+		info: This is the version for the rustup toolchain manager, not the rustc compiler.
+		info: The currently active `rustc` version is `rustc 1.67.1 (d5a82bbd2 2023-02-07)`
+	\end{verbatim}
+\end{footnotesize}
+
+
 \end{document}
